# cmakelean

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dependencies.cmake  main.cpp
src/: CMakeLists.txt  Formula.cpp  Formula.h  components.cpp  components.h  header.cpp  header.h  hello.c  libsource.cmake  main.cpp  main01.cpp  main02.cpp  main03.cpp  main03RandomNumber.cpp  main04.cpp
test/: CMakeLists.txt  Formula-test.cpp
